--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/sick_scan_xd
-	previous = 
-	base = 45bed6f
+	previous = 45bed6f
+	base = 3828ec1
 	trim = 
 	trimbase = 
