--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/sick_scan_xd
-	previous = 
-	base = 2b6a231
+	previous = 2b6a231
+	base = 6c1a8e8
 	trim = 
 	trimbase = 
